--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -25,7 +25,6 @@
   background-color: var(--default-color);
   cursor: pointer;
   transition: border-color 0.25s;
-
 }
 
 .button:hover {
@@ -67,7 +66,6 @@
 .button.danger:hover {
   background-color: var(--danger-darken-color);
   border-color: var(--danger-darken-color);
- 
 }
 
 .button.disabled {
@@ -78,10 +76,9 @@
 }
 
 .button.disabled:active {
-  box-shadow: none
+  box-shadow: none;
 }
 
-
 .button.block {
-  width: 100%
+  width: 100%;
 }
